<resources>
    <string name="app_name">AWOL</string>
    <string name="avgat">AVERAGE\nATTENDANCE</string>
    <string name="avgab">AVERAGE\nABSENTS</string>
    <string name="abtAPP">THIS APP DOES NOT PROMOTE BUNKING. THE APP WAS DESIGNED TO ENSURE THAT YOU CAN MANAGE A PROPER
    ATTENDANCE AND BUNK SAFELY.THE ATTENDANCE SHOWN IS COMPLETELY MANAGED BY COLLEGE.THE DEVELOPER IS NOT RESPONSIBLE FOR
        INACCURATE ATTENDANCE OR DELAY IN ATTENDANCE UPDATE.</string>
    <string name="absents">Absents :</string>
    <string name="classes">Classes :</string>
    <string name="practical">Practical :</string>
    <string name="theory">Theory :</string>
    <string name="_22_12_2017">22/12/2017</string>
    <string name="updated_on">Updated On:</string>
    <string name="_95_5">95.5%</string>
    <string name="number_theory">Number Theory</string>
    <string name="not_applicable">not_applicable</string>
    <string name="developers">Developers</string>
    <string name="made_with_as_a_project_for_codex">MADE WITH 💚 AS A PROJECT FOR CODEX</string>
    <string name="disclaimer">DISCLAIMER</string>
    <string name="todo">TODO</string>
    <string name="sharing_text">Screenshot by AWOL\nDownload now codex-iter.github.io/AWOL\n\n\n_Developed and maintained by CODEX_</string>
    <string name="share_title">Share Attendance</string>
    <string name="your_target_attendance">Your Target Attendance:</string>
    <string name="result">Result</string>
    <string name="or">OR</string>
    <string name="classes_you_wanna_bunk">Classes you want to bunk:</string>
    <string name="bunk">Bunk</string>
    <string name="classes_you_gonna_attend">Classes you gonna attend:</string>
    <string name="attend">Attend</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="codex">CODEX</string>
    <string name="_1641017271">404</string>
    <string name="placeholder_average_percentage">0%</string>
    <string name="placeholder_average_absent">0</string>
    <string name="plan_bunk">Plan@Bunk</string>
    <string name="share_app">Invite Friends</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="open_source_geek">Open Source Geek?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="change_theme">Change Theme</string>
    <string name="Select_Subject">Select Subject</string>
    <string name="oops_attendance_not_available">Attendance is currently unavailable</string>
    <string name="results">Results</string>
    <string name="avinav">Avinaba Ray</string>
    <string name="check_result"><u>Check Results</u></string>
    <string name="welcome_back">Getting things ready for you!</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="codex_info">Codex Join Us</string>
    <string name="learn_more">Learn more</string>
    <string name="please_wait">Please Wait</string>
    <string name="sub_code">Sub Code</string>
    <string name="textview">TextView</string>
    <string name="grade">Grade</string>
    <string name="credits_earned">Credits Earned</string>
    <string name="semester">Semester</string>
    <string name="sgpa">SGPA</string>
    <string name="select_theme">Select Theme</string>
    <string name="apply">Apply</string>
    <string name="video_lectures">Video Lectures</string>
    <string name="subject_name">Subject Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="no_lectures_found">NO LECTURES FOUND!!</string>
    <string name="app_is_under_maintenance">APP IS UNDER MAINTENANCE. \n WE WILL BE BACK SOON!</string>
    <string name="cgpa">CGPA</string>
    <string name="follow_us">Follow us</string>
    <string name="contact_us">Contact us</string>
    <string name="download_stats">%.1f %s Iterians are using AWOL App </string>
    <string name="_2_1_thousand_iterians_are_using_awol_app">2.1 Thousand Iterians are using AWOL App</string>
    <string name="results_not_available">Results not available</string>
    <string name="downloading_new_updates">Downloading new updates</string>
    <string name="average_present">%d %%</string>
    <string name="moodle">Moodle</string>
    <string name="update_percentage">%d %%</string>
    <string name="update_percentage_100">%d /100</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_message">We recommend you to keep a strong password.\n\n
        <li>At least 8 characters</li>\n
        <li>A mixture of both uppercase and lowercase letters</li>\n
        <li>A mixture of letters and numbers</li>\n
        <li>Inclusion of at least one special character, e.g., ! @ # ?</li>\n </string>
    <string name="update_password">Update</string>
    <string name="new_password_setting_screen">New Password</string>
    <string name="confirm_password_setting_screen">Confirm Password</string>
    <string name="otp_message">Please wait, we are sending you an SMS with containing your credentials</string>
    <string name="add_account">Add Account</string>
    <string name="updated_just_now">Updated just now</string>
    <string name="share">Share</string>
    <string name="setting">Setting</string>
    <string name="switch_account">Switch Account</string>
</resources>

