<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingTop="30dp"
    android:paddingBottom="10dp"
    tools:ignore="UnusedAttribute">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:paddingStart="8dp"
        android:paddingTop="20dp"
        android:paddingEnd="0dp"
        android:text="@string/codex"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/_1641017271"
        android:textColor="#cccccc"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp"
            android:weightSum="2">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:text="@string/avgat"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?colorAccent"
                android:textSize="13sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/avat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/placeholder_average_percentage"
                android:textColor="#cccccc"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp"
            android:weightSum="2">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/avgab"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?colorAccent"
                android:textSize="13sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/avab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/placeholder_average_absent"
                android:textColor="#cccccc"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/arrowDownUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="1dp"
        android:src="@drawable/arrow_down"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAccounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1.5dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            tools:listitem="@layout/item_multiple_account" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
