<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/recyclerResultParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:elevation="10dp"
        app:cardCornerRadius="7dp"
        app:contentPadding="3dp"
        card_view:cardBackgroundColor="@color/cardview_shadow_end_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/imageViewResultEmotion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:scaleType="fitXY" />

            </androidx.cardview.widget.CardView>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:columnCount="3"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:rowCount="4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:padding="2.5dp"
                    android:text="@string/semester"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewSem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/textview"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:typeface="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:padding="2.5dp"
                    android:text="@string/credits_earned"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewCredits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/textview"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:typeface="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:padding="2.5dp"
                    android:text="@string/sgpa"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewSGPA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:scrollbars="vertical"
                    android:text="@string/textview"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:typeface="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:padding="2.5dp"
                    android:text="@string/cgpa"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewCGPA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:scrollbars="vertical"
                    android:text="TextView"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:maxLines="2"
                    android:typeface="normal" />
            </GridLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>